# tokenq

./: .gitignore  LICENSE  PITCH_DECK.md  README.md  pyproject.toml  run.py  strategies-visual.html  strategies.md
.claude/commands/: tokenq.md
.github/workflows/: ci.yml
screenshots/: capture.mjs  package.json
src/tokenq/: __main__.py  cli.py  config.py  daemon.py  logging.py  pricing.py  serve.py  skill_compress.py  storage.py
src/tokenq/bigmemory/: ARCHITECTURE.md  __init__.py  embedder.py  inject.py  mcp.py  pipeline.py  store.py
src/tokenq/dashboard/: app.py  report.py
src/tokenq/dashboard/static/: index.html
src/tokenq/pipeline/: __init__.py  bandit.py  cache.py  compaction.py  compress.py  dedup.py  output.py  skills.py
src/tokenq/proxy/: app.py  classify.py  intercept.py  observe.py  passthrough.py  upstream.py
tests/: conftest.py  test_bigmemory_embedder.py  test_bigmemory_inject.py  test_bigmemory_mcp.py  test_bigmemory_pipeline.py  test_bigmemory_store.py  test_cli.py  test_daemon.py  test_dashboard.py  test_dashboard_codeburn.py  test_pipeline_bandit.py  test_pipeline_cache.py  test_pipeline_compaction.py  test_pipeline_compress.py  test_pipeline_dedup.py  test_pipeline_output.py  test_pipeline_skills.py  test_proxy.py  test_proxy_classify.py  test_proxy_observe.py  test_report.py  test_serve.py  test_skill_compress.py  test_storage.py
