[project]
name = "tokenq"
version = "0.1.0"
description = "Local proxy that cuts your Claude API bill with quant techniques"
requires-python = ">=3.11"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "tokenq" }]
dependencies = [
  "starlette>=0.37",
  "uvicorn[standard]>=0.30",
  "httpx[http2]>=0.27",
  "aiosqlite>=0.20",
  "typer>=0.12",
  "tiktoken>=0.7",
  "reportlab>=4.0",
]

[project.optional-dependencies]
embeddings = [
  "fastembed>=0.3",
]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "pytest-httpx>=0.30",
  "ruff>=0.5",
  "fastembed>=0.3",
]

[project.scripts]
tokenq = "tokenq.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tokenq"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
  "embeddings: tests that load the real fastembed model (slow first-run; skip with `-m 'not embeddings'`)",
]

[tool.ruff]
line-length = 100
target-version = "py311"
